--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -663,6 +663,7 @@
 	"Show minimap":{
 		Italian:"Mostra minimappa",
 		Simplified_Chinese:"显示小地图"
+		Russian:"Показать миникарту"
 	}
 
 	"Fontset":{
