--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2098,6 +2098,7 @@
 
 	"Clear improvements":{
 		Italian:"Elimina miglioramenti"
+		Russian:"Удалить улучшения"
 		Simplified_Chinese:"清除设施"
 	}
 
