--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -15,6 +15,7 @@
 	
 	"'Where tillage begins, other arts follow. The farmers therefore are the founders of human civilization.' - Daniel Webster":{
 		Italian:"'Dove arriva la coltivazione, seguono le altre arti. I contadini sono quindi i fondatori della civiltà umana.' - Daniel Webster"
+		Simplified_Chinese:"“只要人们开始耕作，其他艺术将随之而生。因此农夫是人类文明的奠基者。”——丹尼尔·韦伯斯特（美国政治家）"
 	}
 	
 	"Pottery":{
@@ -31,6 +32,7 @@
 	
 	"'Shall the clay say to him that fashioneth it, what makest thou?' - Bible Isaiah 45:9":{
 		Italian:"'L'argilla dirà forse a colui che le dà forma: 'Che fai'?' - La Bibbia, Isaia, 45:9"
+		Simplified_Chinese:"“泥土岂可对陶工说：你在做什么呢？”——圣经·以赛亚书 45:9"
 	}
 
 	"Animal Husbandry":{
@@ -47,6 +49,7 @@
 	
 	"'Thou shalt not muzzle the ox when he treadeth out the corn.' - Bible Deuteronomy 25:4":{
 		Italian:"'Non mettere la musoliera al bue mentre sta trebbiando.' - Deuteronomio, 25:4"
+		Simplified_Chinese:"“牛在踹谷的时候，不可笼住它的嘴。”——圣经·申命记　25:4"
 	}
 
 	"Archery":{
@@ -63,6 +66,7 @@
 	
 	"'The haft of the arrow has been feathered with one of the eagle's own plumes, we often give our enemies the means of our own destruction' - Aesop":{
 		Italian:"'La freccia è piumata con le penne dell'aquila. Così, spesso diamo ai nemici i mezzi per la nostra stessa distruzione.' - Esopo"
+		Simplified_Chinese:"“那老鹰所中箭矢的箭尾是由一根它自己的羽毛制成的。我们总是给敌人提供毁灭我们自己的工具。”——伊索"
 	}
 
 	"Mining":{
@@ -79,6 +83,7 @@
 	
 	"'The meek shall inherit the Earth, but not its mineral rights.' - J. Paul Getty":{
 		Italian:"'Gli umili erediteranno la terra, ma non i suoi diritti minerari.' - J. Paul Getty"
+		Simplified_Chinese:"“谦卑的人会继承地球，而不是它的采矿权。”——吉恩·保罗·盖蒂（美国实业家）"
 	}
 
 	"Sailing":{
@@ -95,6 +100,7 @@
 	
 	"'He who commands the sea has command of everything.' - Themistocles":{
 		Italian:"'Chi ha il dominio del mare ha il dominio di tutto.' - Temistocle"
+		Simplified_Chinese:"“谁主宰了海洋，谁就主宰了一切。”——地米斯托克利（古希腊政治家兼军事家）"
 	}
 
 	"Calendar":{
@@ -111,6 +117,7 @@
 	
 	"'So teach us to number our days, so that we may apply our hearts unto wisdom.' - Bible Psalms 90:12":{
 		Italian:"'Insegnaci a contare i nostri giorni e giungeremo alla sapienza del cuore.' - Salmi, 90:12"
+		Simplified_Chinese:"“求你指教我们怎样数算自己的日子，好叫我们得着智慧的心。”——圣经·诗篇 90:12"
 	}
 
 	"Writing":{
@@ -127,6 +134,7 @@
 	
 	"'He who destroys a good book kills reason itself.' - John Milton":{
 		Italian:"'Chi distrugge un buon libro uccide la ragione stessa.' - John Milton"
+		Simplified_Chinese:"“毁禁一本好书就是杀死理性本身。”——弥尔顿"
 	}
 
 	"Trapping":{
@@ -143,6 +151,7 @@
 	
 	"'Even brute beasts and wandering birds do not fall into the same traps or nets twice.' - Saint Jerome":{
 		Italian:"'Persino le ferali bestie e gli uccelli vagabondi non cadono due volte nelle stesse trappole.' - San Girolamo"
+		Simplified_Chinese:"“即便是凶残的野兽和恍惚的小鸟也不会落入相同的陷阱或罗网两次。”——圣哲罗姆（古罗马学者）"
 	}
 
 	"The Wheel":{
@@ -159,6 +168,7 @@
 	
 	"'Wisdom and virtue are like the two wheels of a cart.' - Japanese proverb":{
 		Italian:"'La saggezza e la virtù sono come le due ruote di un carretto.' - Proverbio giapponese"
+		Simplified_Chinese:"“智慧和美德就像是一辆手推车的两个轮子。”——日本俗语"
 	}
 
 	"Masonry":{
@@ -175,6 +185,7 @@
 	
 	"'How happy are those whose walls already rise!' - Virgil":{
 		Italian:"'Lieti coloro le cui mura già si ergono!' - Virgilio"
+		Simplified_Chinese:"“你们是多么的幸运，因为你们的城墙已经筑起！”——维吉尔"
 	}
 
 	"Bronze Working":{
@@ -191,6 +202,7 @@
 	
 	"'Here Hector entered, with a spear eleven cubits long in his hand; the bronze point gleamed in front of him, and was fastened to the shaft of the spear by a ring of gold.' - Homer":{
 		Italian:"'Ed ecco che entrò Ettore, impugnando una lancia lunga undici cubiti; la punta di bronzo brillava davanti a lui ed era fissata all'asta con un anello d'oro.' - Omero"
+		Simplified_Chinese:"“赫克托耳手持十一肘的长矛走上战场；黄金圆环固定的青铜矛尖在他身前闪耀。”——荷马"
 	}
 	
 ///////// Technologies (Classical Era)
@@ -209,6 +221,7 @@
 	
 	"'He made an instrument to know if the moon shine at full or no.' - Samuel Butler":{
 		Italian:"'Costruì uno strumento per sapere se la luna brilla in pieno oppure no.' - Samuel Butler"
+		Simplified_Chinese:"“他制造了一种仪器来仔细观察月亮的光芒。”——塞缪尔·巴特勒（英国学者）"
 	}
 
 	"Horseback Riding":{
@@ -225,6 +238,7 @@
 	
 	"'A Horse! A Horse! My kingdom for a horse!' - Shakespeare (Richard III)":{
 		Italian:"'Un cavallo! Un cavallo! Il mio regno per un cavallo!' - William Shakespeare (Riccardo III)"
+		Simplified_Chinese:"“用我的王国换一匹马！”——威廉·莎士比亚：《理查三世》"
 	}
 
 	"Mathematics":{
@@ -241,6 +255,7 @@
 	
 	"'Mathematics is the gate and key to the sciences.' - Roger Bacon":{
 		Italian:"'La matematica è la porta e la chiave delle scienze.' - Ruggero Bacone"
+		Simplified_Chinese:"“数学是通向科学世界的大门钥匙。”——罗杰·培根（中世纪英国科学家）"
 	}
 
 	"Construction":{
@@ -257,6 +272,7 @@
 	
 	"'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe":{
 		Italian:"'Di un edificio bisogna guardare tre cose: che sia collocato nel posto giusto; che abbia fondamenta solide; che la costruzione sia eseguita con perizia.' - Johann Wolfgang von Goethe"
+		Simplified_Chinese:"“在一幢建筑里要看三样东西：它是否被正确地选址；它是否被牢固地奠基；它是否被成功地建造。”——约翰·沃尔夫冈·冯·歌德"
 	}
     
 	"Philosophy":{
@@ -273,6 +289,7 @@
 	
 	"'There is only one good, knowledge, and one evil, ignorance.' - Socrates":{
 		Italian:"'C'è un solo bene, la conoscenza, e un solo male, l'ignoranza.' - Socrate"
+		Simplified_Chinese:"“世上只有一种善，那就是知识，也只有一种恶，那就是无知。”——苏格拉底"
 	}
 
 	"Currency":{
@@ -289,6 +306,7 @@
 	
 	"'Better is bread with a happy heart than wealth with vexation.' - Amenemope":{
 		Italian:"'Meglio il pane con un cuore felice, che la ricchezza con l'afflizione.' - Amenemope"
+		Simplified_Chinese:"“快乐的温饱胜过烦恼的富裕。”——阿蒙尼莫普（古埃及学者）"
 	}
 
 	"Engineering":{
@@ -305,6 +323,7 @@
 	
 	"'Instrumental or mechanical science is the noblest and, above all others, the most useful.' - Leonardo da Vinci":{
 		Italian:"'La scienza degli strumenti e della meccanica è la più nobile di tutte, e soprattutto la più utile.' - Leonardo da Vinci"
+		Simplified_Chinese:"“研究工具或机械的学问是最崇高的，也是所有学问当中最有用的。”——列奥纳多·达·芬奇"
 	}
 
 	"Iron Working":{
@@ -321,6 +340,7 @@
 	
 	"'Do not wait to strike til the iron is hot, but make it hot by striking.' - William Butler Yeats":{
 		Italian:"'Non aspettate che il ferro sia caldo prima di batterlo; rendetelo caldo con i vostri colpi.' - William Butler Yeats"
+		Simplified_Chinese:"“不要等铁变热才对其锻打；而要通过锻打而使其变热。”——威廉·巴特勒·叶芝"
 	}
 	
 /////////   Technologies (Medieval Era)
@@ -339,6 +359,7 @@
 	
 	"'Three things are necessary for the salvarion of man: to know what he ought to believe; to know what he ought to desire; and to know what he ought to do' - St. Thomas Aquinas":{
 		Italian:"'Tre cose sono necessarie per la salvezza dell'uomo: sapere in cosa deve credere; sapere che cosa deve desiderare; sapere cosa deve fare.' - San Tommaso d'Aquino"
+		Simplified_Chinese:"“有三点是自我救赎所必需的：知道自己应该信什么；知道自己应该要什么；知道自己应该做什么。”——圣托马斯·阿奎那"
 	}
 
 	"Civil Service":{
@@ -355,6 +376,7 @@
 	
 	"'The only thing that saves us from the bureaucracy is it inefficiency' - Eugene McCarthy":{
 		Italian:"'L'unica cosa che ci salva dalla burocrazia è la sua inefficienza.' - Eugene McCarthy"
+		Simplified_Chinese:"“唯一能从官僚主义里拯救我们的是它自己的低效。”——尤金·麦卡锡（美国政治家）"
 	}
 
 	"Enables Open Borders agreements":{
@@ -378,6 +400,7 @@
 	
 	"'The merchants and the traders have come; their profits are pre-ordained...' - Sri Guru Granth Sahib":{
 		Italian:"'I mercanti e i bottegai sono arrivati; i loro profitti sono prestabiliti...' - Sri Guru Granth Sahib"
+		Simplified_Chinese:"“商人和贸易者利润的大小，早在他们开始经营的时候就已经决定了……”——锡克教圣典《格兰斯·沙希伯》"
 	}
 
 	"Physics":{
@@ -394,6 +417,7 @@
 	
 	"'Measure what is measurable, and make measurable what is not so.' - Galileo Galilei":{
 		Italian:"'Misura ciò che è misurabile, e rendi misurabile ciò che non lo è.' - Galileo Galilei"
+		Simplified_Chinese:"“测量一切可测之物，并把不可测的变为可测。”——伽利略"
 	}
 
 	"Metal Casting":{
@@ -410,6 +434,7 @@
 	
 	"'When pieces of bronze or gold or iron break, the metal-smith welds them together again in the fire, and the bond is established.' - Sri Guru Granth Sahib":{
 		Italian:"'Quando pezzi di bronzo o d'oro o di ferro si rompono, il fabbro li rinsalda ancora con il fuoco e il legame è ristabilito.' - Sri Guru Granth Sahib"
+		Simplified_Chinese:"“当整块的青铜、黄金或黑铁碎裂时，工匠们会用火重新熔铸，让它们再次结为一体。”——锡克教圣典《格兰斯·沙希伯》"
 	}
 
 	"Steel":{
@@ -426,6 +451,7 @@
 	
 	"'John Henry said to his Captain, / 'A man ain't nothin' but a man, / And before I'll let your steam drill beat me down, / I'll die with the hammer in my hand.'' - Anonymous: The Ballad of John Henry, the Steel-Drivin' Man":{
 		Italian:"'John Henry disse al cuo Capitano, 'Un uomo non è che un uomo, e prima che la tua perforatrice a vapore mi batta, morirò col martello in mano.' - Anonimo: La ballata di John Henry, l'uomo che batte l'acciaio"
+		Simplified_Chinese:"他向队长立誓言：“硬汉虽说只是人，若要气钻胜过我，除非我死把锤扔。”——佚名：钢铁汉子约翰·亨利之歌（美国民谣）"
 	}
 
 	"Compass":{
@@ -442,6 +468,7 @@
 	
 	"'I find the great thing in this world is not so much where we stand, as in what direction we are moving.' - Oliver Wendell Holmes":{
 		Italian:"'Trovo che la cosa grandiosa di questo mondo non sia tanto dove siamo, ma verso dove stiamo andando.' - Oliver Wendell Holmes"
+		Simplified_Chinese:"“我认为现代世界里最重要的不是我们所处的位置，而是我们前进的方向。”——老奥利弗·温德尔·霍姆斯（美国诗人）"
 	}
 
 	"Education":{
@@ -458,6 +485,7 @@
 	
 	"'Education is the best provision for old age.' - Aristotle":{
 		Italian:"'L'educazione è la migliore previdenza per la vecchiaia.' - Aristotele"
+		Simplified_Chinese:"“教育是老年生活最好的保障。”——亚里士多德"
 	}
 
 	"Chivalry":{
@@ -474,6 +502,7 @@
 	
 	"'Whoso pulleth out this sword of this stone and anvil, is rightwise king born of all England.' - Malory":{
 		Italian:"'Chi estrae questa spada dall'incudine e dalla roccia è per diritto nato re di tutta l'Inghilterra.' - Malory"
+		Simplified_Chinese:"“谁能将这柄剑从石台中拔出，他就是全英格兰真正的国王。”——托马斯·马洛里（中世纪英国诗人）"
 	}
 
 	"Machinery":{
@@ -490,6 +519,7 @@
 	
 	"'The press is the best instrument for enlightening the mind of man, and improving him as a rational, moral and social being.' - Thomas Jefferson":{
 		Italian:"'La stampa è il migliore strumento per illuminare la mente dell'uomo e migliorarlo come essere razionale, morale e sociale.' - Thomas Jefferson"
+		Simplified_Chinese:"“印刷机是启蒙人心的最好工具，能将人提升为有理性有道德的社会人。”——托马斯·杰斐逊"
 	}
 	
 ///////// Technologies (Renaissance Era)
@@ -508,6 +538,7 @@
 	
 	"'Joyfully to the breeze royal Odysseus spread his sail, and with his rudder skillfully he steered.' - Homer":{
 		Italian:"'Gioiosamente il re Odisseo aprì la vela alla brezza e abilmente manovrò il remo.' - Omero"
+		Simplified_Chinese:"“愉快地乘着轻风，高贵的奥德修斯扬起他的船帆，熟练地掌控着他的舵柄。”——荷马"
 	}
 
 	"Acoustics":{
@@ -524,6 +555,7 @@
 	
 	"'Their rising all at once was as the sound of thunder heard remote' - Milton":{
 		Italian:"'Quando si levarono tutti insieme, il suono fu come un tuono che rimbomba lontano.' - Milton"
+		Simplified_Chinese:"“他们立刻一同起立，发出的声响犹如一阵远雷。”——弥尔顿"
 	}
 
 	"Banking":{
@@ -540,6 +572,7 @@
 	
 	"'Happiness: a good bank account, a good cook and a good digestion' - Jean Jacques Rousseau":{
 		Italian:"'La felicità è un buon conto in banca, una buona cuoca e una buona digestione.' - Jean-Jacques Rousseau"
+		Simplified_Chinese:"“幸福：一个好的银行账户，一个好厨师和一个好胃口。”——让·雅克·卢梭"
 	}
 
 	"Printing Press":{
@@ -556,6 +589,7 @@
 	
 	"'It is a newspaper's duty to print the news and raise hell.' - The Chicago Times":{
 		Italian:"'Il dovere di un giornale è pubblicare le notizie e scatenare polveroni.' - The Chicago Times"
+		Simplified_Chinese:"“报纸的任务就是印出新闻和制造麻烦。”——芝加哥时报"
 	}
 
 	"Gunpowder":{
@@ -572,6 +606,7 @@
 	
 	"'The day when two army corps can annihilate each other in one second, all civilized nations, it is to be hoped, will recoil from war and discharge their troops.' - Alfred Nobel":{
 		Italian:"'Il giorno in cui due eserciti potranno distruggersi l'un l'altro in un solo secondo, si può sperare che tutte le nazioni civilizzate rifuggiranno la guerra e scioglieranno le loro truppe.' - Alfred Nobel"
+		Simplified_Chinese:"“当在战场上交锋的两支军队能够在一秒钟之内同时毁灭对方的那一天到来时，也许他们会选择放弃战争并解除武装。”——阿尔弗雷德·诺贝尔"
 	}
 
 	"Navigation":{
@@ -588,6 +623,7 @@
 	
 	"'The winds and the waves are always on the side of the ablest navigators.' - Edward Gibbon":{
 		Italian:"'I venti e le onde sono sempre dalla parte dei navigatori più abili.' - Edward Gibbon"
+		Simplified_Chinese:"“风浪永远站在最出色的领航员一边。”——爱德华·吉本（英国历史学家）"
 	}
 
 	"Architecture":{
@@ -604,18 +640,7 @@
 	
 	"'Architecture begins where engineering ends.' - Walter Gropius":{
 		Italian:"'L'architettura inizia dove finisce l'ingegneria.' - Walter Gropius"
-	}
-
-	"Archaeology":{ // Shouldn't it be in Industrial Age?
-		Italian:"Archeologia" 
-		Russian:"Aрхеология"
-		French:"Archéologie"
-		Romanian:"Arheologie"
-		German:"Archäologie"
-		Dutch:"Archeologie"
-		Spanish:"Arqueología"
-		Simplified_Chinese:"考古学"
-		Portuguese:"Arqueologia"
+		Simplified_Chinese:"“建筑设计学起于工程学终止之处。”——沃尔特·格罗佩斯（著名德国建筑师）"
 	}
 
 	"Economics":{
@@ -632,6 +657,7 @@
 	
 	"'Compound interest is the most powerful force in the universe.' - Albert Einstein":{
 		Italian:"'L'interesse composto è la forza più potente dell'universo.' - Albert Einstein"
+		Simplified_Chinese:"“复息利率是宇宙中最强大的力量。”——阿尔伯特·爱因斯坦"
 	}
 	
 	"Metallurgy":{
@@ -648,6 +674,7 @@
 	
 	"'There never was a good knife made of bad steel.' - Benjamin Franklin":{
 		Italian:"'Non c'è mai stato un buon coltello fatto di cattivo acciaio.' - Bejamin Franklin"
+		Simplified_Chinese:"“从没有一把由坏钢铸成的好刀。”——本杰明·富兰克林"
 	}
 	
 	"Chemistry":{
@@ -664,6 +691,7 @@
 	
 	"'Wherever we look, the work of the chemist has raised the level of our civilization and has increased the productive capacity of the nation.' - Calvin Coolidge":{
 		Italian:"'Dovunque voltiamo gli occhi, il lavoro del chimico ha alzato il livello della nostra civiltà e incrementato la capacità produttiva della nazione.' - Calvin Coolidge"
+		Simplified_Chinese:"“无论从哪方面看，化学家的工作都提高了我们文明的程度，增加了国家的生产力。”——卡尔文·柯立芝（美国第30任总统）"
 	}
 	
 ///////// Technologies (Industrial Era) - as of now the tech tree itself is incomplete, more will probably be added later
@@ -680,6 +708,18 @@
 		Portuguese:"Teoria científica"
 	}
 	
+	"Archaeology":{ //it should be in Industrial Age.
+		Italian:"Archeologia" 
+		Russian:"Aрхеология"
+		French:"Archéologie"
+		Romanian:"Arheologie"
+		German:"Archäologie"
+		Dutch:"Archeologie"
+		Spanish:"Arqueología"
+		Simplified_Chinese:"考古学"
+		Portuguese:"Arqueologia"
+	}
+
 	"Industrialization":{
 		Italian:"Industrializzazione"
 		Russian:"Индустриализация"
