--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -1008,6 +1008,10 @@
 		Portuguese:"Farmacêuticas"
 	}
 
+	"'In nothing do men more nearly approach the gods than in giving health to men.' - Cicero":{
+		Simplified_Chinese:"“没有什么比给予他人健康更使人接近诸神。”——西塞罗"
+	}
+	
 	"Radar":{
 		Italian:"Radar"
 		Russian:"Радар"
