--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -1194,7 +1194,7 @@
 		German:"Teilchenphysik"
 		Dutch:"Deeltjesfysica"
 		Spanish:"Física de partículas"
-		Simplified_Chinese:"量子物理"
+		Simplified_Chinese:"粒子物理"
 		Portuguese:"Física de particulas"
 	}
 
