Correct some Chinese translation.

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -592,7 +592,7 @@
 		French:"Collisée"
 		Romanian:"Coloseum"
 		Spanish:"Coliseo"
-		Simplified_Chinese:"罗马竞技场"
+		Simplified_Chinese:"竞技场"
 		Portuguese:"Coliseu"
 		German:"Collosseum"
 		Polish:"Koloseum"
