--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -249,7 +249,7 @@
 		French:"Immortel"
 		Romanian:"Nemuritor"
 		Spanish:"Inmortal"
-		Simplified_Chinese:"不朽"
+		Simplified_Chinese:"仙人"
 		Portuguese:"Imortal"
 		German:"Unsterblicher"
 	}
