--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -709,6 +709,7 @@
 	}
 
 	"'Every great advance in science has issued from a new audacity of imagination.' - John Dewey":{
+		Italian:"'Ogni grande progresso della scienza è scaturito da una nuova audacia dell'immaginazione.' - John Dewey"
 		Simplified_Chinese:"“科学的每一项重要进展都得力于大胆的想象力。”——约翰·杜威（美国教育家）"
 	}
 
@@ -725,6 +726,7 @@
 	}
 
 	"'Those who cannot remember the past are condemned to repeat it.' - George Santayana":{
+		Italian:"'Chi non ricorda il passato è condannato a riviverlo.' - George Santayana"
 		Simplified_Chinese:"“不能铭记历史的人注定要重蹈覆辙。”——乔治·桑塔亚那（西班牙哲学家）"
 	}
 
@@ -741,6 +743,7 @@
 	}
 
 	"'Industrialization based on machinery, already referred to as a characteristic of our age, is but one aspect of the revolution that is being wrought by technology.' - Emily Greene Balch":{
+		Italian:"'L'industrializzazione basata sui macchinari, già indicata come una caratteristica della nostra epoca, è solo uno degli aspetti della rivoluzione prodotta dalla tecnologia.' - Emily Greene Balch"
 		Simplified_Chinese:"“由机械的发展而产生的工业化大生产，虽被看作我们这个时代的标志，但它其实不过是科技进步带来的诸多革命之一。”——艾米莉·格伦尼·巴尔奇（美国女经济学家）"
 	}
 	
@@ -757,6 +760,7 @@
 	}
 
 	"'It is well that war is so terrible, or we should grow too fond of it.' - Robert E. Lee":{
+		Italian:"'È un bene che la guerra sia così terribile, altrimenti potrebbe cominciare a piacerci troppo.' - Robert E. Lee"
 		Simplified_Chinese:"“幸好战争是如此恐怖，否则我们将会打到乐此不疲。”——罗伯特·爱德华·李"
 	}
 
@@ -773,6 +777,7 @@
 	}
 
 	"'Wars may be fought with weapons, but they are won by men. It is the spirit of the men who follow and of the man who leads that gains the victory.' - George S. Patton":{
+		Italian:"'Le guerre possono anche essere combattute con le armi, ma sono vinte dagli uomini. È lo spirito degli uomini che seguono e dell'uomo che conduce che porta alla vittoria.' - George S. Patton"
 		Simplified_Chinese:"“战争是武器间的较量，但胜利必定要由人来夺取。是引领者及其追随者们的精神力量使他们赢得了胜利。”——乔治·史密斯·巴顿"
 	}
 
@@ -789,6 +794,7 @@
 	}
 	
 	"'The nation that destroys its soil destroys itself.' - Franklin Delano Roosevelt":{
+		Italian:"'La nazione che distrugge il suo suolo distrugge se stessa.' - Franklin Delano Roosevelt"
 		Simplified_Chinese:"“一个毁掉自己所有土壤的国家也将毁灭自身。”——富兰克林·德拉诺·罗斯福"
 	}
 
@@ -805,6 +811,7 @@
 	}
 
 	"'If the brain were so simple we could understand it, we would be so simple we couldn't.' - Lyall Watson":{
+		Italian:"'Se il cervello fosse così semplice da poter essere compreso, noi saremmo troppo semplici per comprenderlo.' - Lyall Watson"
 		Simplified_Chinese:"“如果大脑简单到能让我们理解，我们的思维就会简单到不能理解大脑。”——莱尔·沃森（南非生物学家）"
 	}
 
@@ -821,6 +828,7 @@
 	}
 
 	"'Is it a fact - or have I dreamt it - that, by means of electricity, the world of matter has become a great nerve, vibrating thousands of miles in a breathless point of time?' - Nathaniel Hawthorne":{
+		Italian:"'È un fatto - oppure l'ho sognato - che, per mezzo dell'elettricità, il mondo della materia è diventato un grande nervo, che vibra per migliaia di miglia in un battibaleno?' - Nathaniel Hawthornev"
 		Simplified_Chinese:"“这是事实还是我的空想：电流能把物质世界变成一个巨大的神经网络，让震颤在瞬息之间传送数千英里？”——纳撒尼尔·霍桑（美国作家）"
 	}
 
@@ -837,6 +845,7 @@
 	}
 
 	"'The nations of the West hope that by means of steam communication all the world will become as one family.' - Townsend Harris":{
+		Italian:"'Le nazioni occidentali sperano che grazie alla comunicazione a vapore il mondo intero diventerà come una grande famiglia.' - Townsend Harris"
 		Simplified_Chinese:"“西方国家希望蒸汽机所推动的相互交流能让全世界亲如一家。”——唐森·哈利斯（美国政治家）"
 	}
 
@@ -852,6 +861,7 @@
 		German:"Dynamit"
 	}
 	"'As soon as men decide that all means are permitted to fight an evil, then their good becomes indistinguishable from the evil that they set out to destroy.' - Christopher Dawson":{
+		Italian:"'Non appena si decide che per combattere il male tutti i mezzi sono leciti, il bene diventa indistinguibile dal male che si vuole distruggere.' - Christopher Dawson"
 		Simplified_Chinese:"“当人们决定可以使用一切方式来同邪恶斗争时，他们的善良将变得和他们想要消灭的邪恶一样可怕。”——克里斯托弗·道森（英国学者）"
 	}
 	
@@ -870,6 +880,7 @@
 	}
 
 	"'And homeless near a thousand homes I stood, and near a thousand tables pined and wanted food.' - William Wordsworth":{
+		Italian:"'E senza dimora vicino a mille dimore stavo, e vicino a mille tavole mi struggevo e desideravo il cibo.' - William Wordsworth"
 		Simplified_Chinese:"“我站在无数无家可归者身边，无数空空如也的桌子面前，渴求着食物。”——威廉·华兹华斯"
 	}
 
@@ -885,6 +896,7 @@
 	}
 
 	"'Nothing is particularly hard if you divide it into small jobs.' - Henry Ford":{
+		Italian:"'Niente è troppo difficile se lo suddividi in piccole azioni.' - Henry Ford"
 		Simplified_Chinese:"“如果你把大任务分解成小任务，任何事都不会特别难。”——亨利·福特"
 	}
 
@@ -901,6 +913,7 @@
 	}
 
 	"'The whole country was tied together by radio. We all experienced the same heroes and comedians and singers. They were giants.' - Woody Allen":{
+		Italian:"'L'intero paese è stato unito dalla radio. Tutti avevamo in comune gli stessi eroi, gli stessi comici, gli stessi cantanti. Erano dei giganti.' - Woody Allen"
 		Simplified_Chinese:"“整个国家被无线电联结在一起，我们都熟识同样的英雄、同样的喜剧演员和同样的歌手。他们都是时代的巨人。”——伍迪·艾伦"
 	}
 
@@ -917,6 +930,7 @@
 	}
 
 	"'Any man who can drive safely while kissing a pretty girl is simply not giving the kiss the attention it deserves.' - Albert Einstein":{
+		Italian:"'Un uomo che sappia guidare in tutta sicurezza mentre sta baciando una ragazza non sta dedicando al bacio tutta l'attenzione che si merita.' - Albert Einstein"
 		Simplified_Chinese:"“任何能够在安全行驶的同时亲吻一个年轻姑娘的男人一定没有给那个吻应有的注意力。”——阿尔伯特·爱因斯坦"
 	}
 
@@ -933,6 +947,7 @@
 	}
 
 	"'Ben, I want to say one word to you, just one word: plastics.' - Buck Henry and Calder Willingham, The Graduate":{
+		Italian:"'Ben, voglio solo dirti una parola... una sola: plastica.' - Buck Henry e Calder Willingham, Il Laureato"
 		Simplified_Chinese:"“本，我只想对你说一个词，就一个词：塑料。”——巴克·亨利/卡尔德·威灵汉姆，《毕业生》"
 	}
 
@@ -949,6 +964,7 @@
 	}
 	
 	"'There's a basic principle about consumer electronics: it gets more powerful all the time and it gets cheaper all the time.' - Trip Hawkins":{
+		Italian:"'Nell'elettronica di consumo esiste un principio di base: diventa sempre più potente e sempre meno costosa.' - Trip Hawkins"
 		Simplified_Chinese:"“消费类电子产品有一个基本法则：它的功能越来越强，它的价格越来越低。”——崔普·霍金斯（美国艺电(EA)公司创始人）"
 	}
 
@@ -964,6 +980,7 @@
 	}
 
 	"'Men, like bullets, go farthest when they are smoothest.' - Jean Paul":{
+		Italian:"'Gli uomini, come i proiettili, vanno più lontano quanto meno sono ruvidi.' - Jean Paul"
 		Simplified_Chinese:"“人就像子弹，最圆滑的才走得最远。”——让·保罗"
 	}
 
@@ -992,6 +1009,7 @@
 	}
 	
 	"'Aeronautics was neither an industry nor a science. It was a miracle.' - Igor Sikorsky":{
+		Italian:"'L'aeronautica non è stata né un settore industriale né una scienza. È stata un miracolo.' - Igor Sikorsky"
 		Simplified_Chinese:"“航空既不是一种工业也不是一门科学。它是一个奇迹。”——伊戈尔·西科尔斯基（俄裔美籍飞机设计师）"
 	}
 
@@ -1002,7 +1020,7 @@
 ///////// Technologies (Information Era)
 	
 	"Pharmaceuticals":{
-		Italian:"Farmaceutica"
+		Italian:"Penicillina"
 		Russian:"Фармацевтика"
 		French:"Médicaments"
 		Romanian:"Produse farmaceutice"
@@ -1014,6 +1032,7 @@
 	}
 
 	"'In nothing do men more nearly approach the gods than in giving health to men.' - Cicero":{
+		Italian:"'Gli uomini non si avvicinano mai tanto agli dèi come quando danno la salute ad altri uomini.' - Cicerone"
 		Simplified_Chinese:"“没有什么比给予他人健康更使人接近诸神。”——西塞罗"
 	}
 	
@@ -1024,6 +1043,7 @@
 	}
 
 	"'Vision is the art of seeing things invisible.' - Jonathan Swift":{
+		Italian:"'La visione è l'arte di vedere le cose invisibili' - Jonathan Swift"
 		Simplified_Chinese:"“洞察力是看到不可见事物的艺术。”——乔纳森·斯威夫特（英国作家）"
 	}
 
@@ -1040,6 +1060,7 @@
 	}
 
 	"'The unleashed power of the atom has changed everything save our modes of thinking, and we thus drift toward unparalleled catastrophes.' - Albert Einstein":{
+		Italian:"'Lo sfruttamento dell'energia dell'atomo ha cambiato tutto tranne il nostro modo di pensare e questo può condurci a catastrofi mai viste prima.' - Albert Einstein"
 		Simplified_Chinese:"“被释放的原子能已经改变了一切，除了我们的思维模式，因此我们正在滑向空前的灾难。”——阿尔伯特·爱因斯坦"
 	}
 
@@ -1056,6 +1077,7 @@
 	}
 
 	"'Computers are like Old Testament gods: lots of rules and no mercy.' - Joseph Campbell":{
+		Italian:"'I computer sono come il Dio del vecchio testamento: tante regole e nessuna pietà.' - Joseph Campbell"
 		Simplified_Chinese:"“计算机就如同旧约中的上帝：诸多戒命且没有怜悯。”——约瑟夫·坎贝尔（美国学者）"
 	}
 
@@ -1066,6 +1088,7 @@
 	}
 
 	"'All men can see these tactics whereby I conquer, but what none can see is the strategy out of which victory is evolved.' - Sun Tzu":{
+		Italian:"'Tutti possono osservare le tattiche che mi portano alla conquista, ma quello che nessuno può vedere è la strategia che gradualmente conduce alla vittoria.' - Sun Tzu"
 		Simplified_Chinese:"“人皆知吾所以胜之形，而莫知吾所以制胜之形”——孙子"
 	}
 
@@ -1079,6 +1102,7 @@
 	}
 
 	"'The root of the evil is not the construction of new, more dreadful weapons. It is the spirit of conquest.' - Ludwig von Mises":{
+		Italian:"'La radice del male non sta nella costruzione di nuove, terribili armi, ma nello spirito stesso della conquista.' - Ludwig von Mises"
 		Simplified_Chinese:"“邪恶的根源并不是什么不断更新的致命武器，而是人对征服的欲望。”——路德维希·冯·米塞斯"
 	}
 
@@ -1095,6 +1119,7 @@
 	}
 
 	"'I am become Death, the destroyer of worlds.' - J. Robert Oppenheimer":{
+		Italian:"'Se migliaia di soli illuminassero il cielo sarebbe uno spettacolo di straordinaria potenza... Sono la Morte, Distruttrice di Mondi.' - J. Robert Oppenheimer"
 		Simplified_Chinese:"“我成了死神，世界的毁灭者。”——尤利乌斯·罗伯特·奥本海默"
 	}
 
@@ -1111,6 +1136,7 @@
 	}
 
 	"'Only within the moment of time represented by the present century has one species, man, acquired significant power to alter the nature of his world.' - Rachel Carson":{
+		Italian:"'Soltanto nel momento storico rappresentato dal secolo attuale una specie, quella dell'uomo, ha acquisito il potere necessario per alterare significativamente la natura del mondo.' - Rachel Carson"
 		Simplified_Chinese:"“直到进入本世纪的时候，作为一个物种的人类才获得了足以改变他所在世界的本质的强大能力。”——雷切尔·卡森（美国生态学家）"
 	}
 
@@ -1127,6 +1153,7 @@
 	}
 
 	"'A good rule for rocket experimenters to follow is this: always assume that it will explode.' - Astronautics Magazine, 1937":{
+		Italian:"'Una buona regola di base per chi fa esperimenti con i razzi è la seguente: dai sempre per scontato che esploderà.' - Rivistica di astronautica, 1937"
 		Simplified_Chinese:"“火箭研究人员要遵守的最好规矩就是：永远要假定它会爆炸。”——航天学杂志，1937"
 	}
 
@@ -1145,6 +1172,7 @@
 	}
 
 	"'1. A robot may not injure a human being or, through inaction, allow a human being to come to harm. 2. A robot must obey any orders given to it by human beings, except when such orders would conflict with the First Law. 3. A robot must protect its own existence as long as such protection does not conflict with the First or Second Law.' - Isaac Asimov":{
+		Italian:"'1. Un robot non può recar danno a un essere umano né permettere che, a causa del proprio mancato intervento, un essere umano riceva danno. 2. Un robot deve obbedire agli ordini impartiti dagli esseri umani, purché tali ordini non contravvengano alla Prima Legge. 3. Un robot deve proteggere la propria esistenza, purché questa autodifesa non contrasti con la Prima e la Seconda Legge.' - Isaac Asimov"
 		Simplified_Chinese:"“1、机器人不得伤害人，也不得见人受到伤害而袖手旁观。2、机器人应服从人的一切命令，但不得违反第一定律。3、机器人应保护自身的安全，但不得违反第一、第二定律。”——艾萨克·阿西莫夫"
 	}
 
@@ -1156,6 +1184,7 @@
 	}
 
 	"'The night is far spent, the day is at hand: let us therefore cast off the works of darkness, and let us put on the armor of light.' - The Holy Bible: Romans, 13:12":{
+		Italian:"'La notte è già inoltrata, presto arriverà il giorno: per questo dobbiamo scestirci delle cattive azioni delle tenebre e indossare l'armatura della luce.' - La Bibbia, Romani 13:12"
 		Simplified_Chinese:"“黑夜已深，白昼将近：我们当脱去暗昧的行为，带上光明的兵器。”——圣经·罗马书 13:12"
 	}
 
@@ -1172,6 +1201,7 @@
 	}
 
 	"'The impact of nanotechnology is expected to exceed the impact that the electronics revolution has had on our lives.' - Richard Schwartz":{
+		Italian:"'Si può prevedere che l'impatto delle nanotecnologie sulla nostra vita sarà superiore a quello della rivoluzione elettronica.' - Richard Schwartz"
 		Simplified_Chinese:"“纳米技术给我们的生活所带来的冲击预计将超过电子革命。”——理查德·舒瓦茨（美国学者）"
 	}
 
@@ -1188,6 +1218,7 @@
 	}
 
 	"'Now, somehow, in some new way, the sky seemed almost alien.' - Lyndon B. Johnson":{
+		Italian:"'Ora, in qualche modo nuovo, il cielo sembrava quasi alieno.' - Lyndon B. Johnson"
 		Simplified_Chinese:"“现在，不知怎的，通过某种新的手段，天空好像都被别国所占据了。”——林登·贝恩斯·约翰逊"
 	}
 
@@ -1204,6 +1235,7 @@
 	}
 
 	"'Every particle of matter is attracted by or gravitates to every other particle of matter with a force inversely proportional to the squares of their distances.' - Isaac Newton":{
+		Italian:"'Ogni particella di materia è attratta da o gravita intorno a ogni altra particella con una forza inversamente proporzionale al quadrato della distanza.' - Isaac Newton"
 		Simplified_Chinese:"“任何物质粒子都会与其他物质粒子相互吸引，产生的引力和距离的平方成反比。”——艾萨克·牛顿"
 	}
 
@@ -1220,6 +1252,7 @@
 	}
 
 	"'I think we agree, the past is over.' - George W. Bush":{
+		Italian:"'Penso che siamo tutti d'accordo che il passato è finito.' - George W.Bush"
 		Simplified_Chinese:"“我想我们都同意：过去已经结束了。”——乔治·沃克·布什"
 	}
 
