--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -994,6 +994,10 @@
 	"'Aeronautics was neither an industry nor a science. It was a miracle.' - Igor Sikorsky":{
 		Simplified_Chinese:"“航空既不是一种工业也不是一门科学。它是一个奇迹。”——伊戈尔·西科尔斯基（俄裔美籍飞机设计师）"
 	}
+
+	"'The introduction of so powerful an agent as steam to a carriage on wheels will make a great change in the situation of man.' - Thomas Jefferson":{//"Railroad" Technology quotes, it has been translated somewhere.
+		Simplified_Chinese:"“引入蒸汽这样一个强大的助手来驱动车轮进行运输，将极大地改变人类的境地。”——托马斯·杰斐逊"
+	}
 	
 ///////// Technologies (Information Era)
 	
